07/21/2025,,<p>Go-Box Meeting on Zoom, 6:30PM Mon 7/21. See the calendar below for details. Anyone who cannot attend and has comments, ideas, and/or suggestions, Please contact Kim FED,  or Bill OOI. We do want to hear from everyone interested.</p> 
07/26/2025,,<p>Next general meeting is July 26. See the calendar for details.</p>
9/30/2025,,<a href="https://docs.google.com/presentation/d/14mvj0vgs5y0lpJWQOFEuR2bGu8bfUCdxEiTFZ8fWD3w/edit?usp=sharing" target="_blank">Gerrie's pictures from Field Day!</a>
9/30/2025,,<p>Club Equipment for Sale! See the list<a href='https://docs.google.com/spreadsheets/d/1_tPh8kIRyhrpL4JxxMX8D3lmgXzalXBWlCSsMXnEoQA/edit?gid=0#gid=0' target="_blank">here</a>.</p>