@@ -65,12 +65,18 @@
                         <li><a href="https://docs.google.com/presentation/d/1rcPR2unq2bsk9pn0ObwOjlI2bblPlbAU/edit?usp=drive_link&ouid=110886085709170615635&rtpof=true&sd=true">Oct - My October Vacation, W7KVI</a></li>
                         <li><a href="https://docs.google.com/presentation/d/1DjOvWpZn8221bzi7FhqqxCc21v8lnjJE/edit?usp=drive_link&ouid=110886085709170615635&rtpof=true&sd=true">AMSAT & Nat’l Restoration Center, Craig Bledsoe KL7H</a></li>
             </div>
-            <div class="full-width-card home-page-card">
-                <h2 >AARL</h2>
-                <p><a href="https://home.arrl.org/action/My-Account/Opt-In-Out">AARL Newletters</p>
-                <p><a href="https://www.arrl.org/arrl-groups">AARL Groups (Awards, Contesting, Education, Etc).</a></p>
-                <h2 >Contesting</h2>
-                <p><a href="https://www.contestcalendar.com/index.php">WA7BNM Contest Calendar</a></p>
+            <div class="full-width-card home-page-card" style="height: fit-content;">
+                <h2>Ham Community Links</h2>
+                    <h3 >Ham Communities</h3>
+                        <p><a href="https://www.qrz.com">QRZ</p>
+                        <p><a href="https://www.eham.net/">eham.net</a></p>
+                    <h3 >AARL</h3>
+                        <p><a href="https://home.arrl.org/action/My-Account/Opt-In-Out">AARL Newletters</p>
+                        <p><a href="https://www.arrl.org/arrl-groups">AARL Groups (Awards, Contesting, Education, Etc).</a></p>
+                    <h3 >Contesting</h3>
+                        <p><a href="https://www.contestcalendar.com/index.php">WA7BNM Contest Calendar</a></p>
+                        <p><a href="https://www.wwdxc.org/">Western Washington DX Club</a></p>
+
             </div>
         </div>
     </main>
