@@ -36,7 +36,7 @@
             <li><a href="meetings.html">Meetings</a></li>
             <li><a href="membership.html">Membership</a></li>
             <li><a href="officers.html">Officers</a></li>
-            <li><a href="emcomm.html">EMCOMM</a></li>
+            <li><a href="emcomm.html">AUXCOMM</a></li>
             <li><a href="community-presentations.html">Ham Community & Presentations</a></li>
             <li><a href="club-documents.html">Club Documents</a></li>
             <li><a href="tools.html">Tools & Reference</a></li>
